new data are added

--- a/config.env
+++ b/config.env
@@ -2,3 +2,13 @@ NODE_ENV=development
 PORT=3004
 DATABASE=mongodb+srv://sunil:<PASSWORD>@cluster0-letja.mongodb.net/e-commerce?retryWrites=true&w=majority
 DATABASE_PASSWORD=qHFjm4vz67It65Uc
+
+JWT_SECRET=i-love-ilam-secre-and-i-love-nepal
+JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
+
+
+EMAIL_USERNAME=985368aca81977
+EMAIL_PASSWORD=ab84c2eed7c831
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
