--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.0",
+    "express-rate-limit": "^5.1.3",
+    "helmet": "^3.22.1",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.15",
     "mongoose-delete": "^0.5.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.8",
     "slugify": "^1.4.0",
-    "validator": "^10.11.0"
+    "validator": "^10.11.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "ndb": "^1.1.5"
