--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "mongoose": "^5.9.15",
     "mongoose-delete": "^0.5.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.8",
+    "pug": "^3.0.0",
+    "sharp": "^0.25.4",
     "slugify": "^1.4.0",
     "validator": "^10.11.0",
     "xss-clean": "^0.1.1"
